--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 ul {
@@ -39,9 +39,49 @@ a {
   padding: 24px;
   padding-left: 250px;
   padding-right: 200px;
+  margin-bottom: 40px;
 }
 
 .container {
   background-color: #1f2937;
-  height: 500px;
+  height: 600px;
+}
+
+.mcontent {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: auto;
+  width: 70%;
+}
+
+.home-image {
+  height: auto;
+  width: 500px;
+  margin-left: auto;
+}
+
+.minfo h1 {
+  font-size: 48px;
+  font-weight: bolder;
+  color: #f9faf8;
+  margin-bottom: 0;
+}
+
+.minfo p {
+  color: white;
+}
+
+.minfo button {
+  background-color: #3882f6;
+  padding: 14px;
+  border-radius: 15px;
+  color: white;
+  font-weight: bold;
+  font-size: large;
+  margin-top: 14px;
+}
+
+.minfo {
+  max-width: 500px;
 }
